# acme-npm

./: cabal.project
acme-is-even/: acme-is-even.cabal
acme-is-even/src/Acme/: IsEven.hs
acme-is-odd/: CHANGELOG.md  acme-is-odd.cabal
acme-is-odd/src/Acme/: IsOdd.hs
