name:                acme-is-odd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            github.com/chessai/acme-npm
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules: Acme.IsOdd
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=3.0 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
